feat : io.spring.dependency-management plugin은 apply false 제거
io.spring.dependency-management plugin이 apply fasle가 되어있으면 subProjects의 dependencyManagement가 동작하지 않기 떄문에 제거

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 // org.springframework.boot plugin의 경우 false를 하지 않으면 bootJar Task에서 에러가 발생한다.
 plugins {
     id 'org.springframework.boot' apply false
-    id 'io.spring.dependency-management' apply false
+    id 'io.spring.dependency-management'
     id 'java'
 }
 
