--- a/settings.gradle
+++ b/settings.gradle
@@ -9,5 +9,6 @@ pluginManagement {
 rootProject.name = 'multi-module-example'
 
 include(
-        "multi-module-example-api"
+        "multi-module-example-api",
+        "support:logging"
 )
