--- a/multi-module-example-api/build.gradle
+++ b/multi-module-example-api/build.gradle
@@ -8,5 +8,6 @@ tasks.getByName("jar") {
 
 dependencies {
     implementation project(":support:logging")
+    implementation project(":storage:db-module")
     implementation 'org.springframework.boot:spring-boot-starter-web'
 }
