--- a/storage/db-module/src/main/resources/db-main.yml
+++ b/storage/db-module/src/main/resources/db-main.yml
@@ -21,15 +21,16 @@ spring:
     console:
       enabled: true
 
-live-code-show:
-  datasource:
-    main:
-      driver-class-name: org.h2.Driver
-      jdbc-url: jdbc:h2:mem:live-code-show;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-      username: sa
-      pool-name: main-db-pool
-      data-source-properties:
-        rewriteBatchedStatements: true
+dev:
+  jihun:
+    datasource:
+      main:
+        driver-class-name: org.h2.Driver
+        jdbc-url: jdbc:h2:mem:test;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+        username: sa
+        pool-name: main-db-pool
+        data-source-properties:
+          rewriteBatchedStatements: true
 
 ---
 spring.config.activate.on-profile: local-dev
